Add renderheading line and tooltips

--- a/slist.csproj
+++ b/slist.csproj
@@ -93,6 +93,9 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
+    <Reference Include="TCore.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\TCore.UI.1.0.0\lib\net452\TCore.UI.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IgnoreList.cs" />
@@ -124,10 +127,6 @@
     <ProjectReference Include="..\liblet\cs\TCore.Settings\TCore.Settings.csproj">
       <Project>{cf92fd1e-ce88-492e-a7c6-c4d29d908a22}</Project>
       <Name>TCore.Settings</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\liblet\cs\TCore.UI\TCore.UI.csproj">
-      <Project>{9213a90f-a23f-4bc5-827c-164ecb6c6cc2}</Project>
-      <Name>TCore.UI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
