use nuget for settings and ui packages

--- a/slist.csproj
+++ b/slist.csproj
@@ -93,6 +93,9 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
+    <Reference Include="TCore.Settings, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\TCore.Settings.1.1.0\lib\net45\TCore.Settings.dll</HintPath>
+    </Reference>
     <Reference Include="TCore.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\TCore.UI.1.0.0\lib\net452\TCore.UI.dll</HintPath>
     </Reference>
@@ -122,12 +125,6 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\liblet\cs\TCore.Settings\TCore.Settings.csproj">
-      <Project>{cf92fd1e-ce88-492e-a7c6-c4d29d908a22}</Project>
-      <Name>TCore.Settings</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
