--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="3.10.1" targetFramework="net46" />
+  <package id="TCore.Settings" version="1.1.0" targetFramework="net46" />
   <package id="TCore.UI" version="1.0.0" targetFramework="net46" />
 </packages>
