Reading and Writing settings

--- a/slist.csproj
+++ b/slist.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Model.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Settings.cs" />
     <Compile Include="SLIBucket.cs" />
     <Compile Include="SLitem.cs" />
     <Compile Include="SLItemSet.cs" />
