add sha256 for compare

--- a/slist.csproj
+++ b/slist.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="SLIBucket.cs" />
     <Compile Include="SLitem.cs" />
+    <Compile Include="SLItemComparer.cs" />
     <Compile Include="SLItemSet.cs" />
     <Compile Include="ISmartListUi.cs" />
     <Compile Include="SmartMatch.cs" />
