--- a/slist.csproj
+++ b/slist.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Model.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RemoveTypeInfo.cs" />
+    <Compile Include="FilePatternInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SLitem.cs" />
     <Compile Include="SLItemComparer.cs" />
