--- a/slist.csproj
+++ b/slist.csproj
@@ -107,7 +107,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FilePatternInfo.cs" />
+    <Compile Include="ProgressBarStatus.cs" />
+    <Compile Include="RaiiWaitCursor.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="SLISetView.cs" />
     <Compile Include="SLitem.cs" />
     <Compile Include="SLItemComparer.cs" />
     <Compile Include="SLItemSet.cs" />
